apps/marble-kde: Use deleteLater on exit

`delete` will not disconnect signals connected to m_part, and will cause
crashes on exit.

BUG: 443144