src/apps/marble-kde/KdeMainWindow.cpp
@@ -71,7 +71,9 @@ MainWindow::MainWindow( const QString& marbleDataPath, QWidget *parent )
 MainWindow::~MainWindow()
 {
     factory()->removeClient( m_part );
-    delete m_part;
+    qInfo() << "before delete" << m_part;
+    m_part->deleteLater();
+    qInfo() << "after delete";
 }
 
 ControlView* MainWindow::marbleControl() const
